wip refactoring for external library

--- a/core/ui/public/index.html
+++ b/core/ui/public/index.html
@@ -15,7 +15,10 @@
     <!-- built files will be auto injected -->
     <script src="config/config.<%= NODE_ENV %>.js"></script>
 
-    <script src="libs/nethserver.js"></script>
+    <!--  //// remove import libs/ns8lib.js -->
+    <!-- <script src="libs/ns8lib.js"></script> -->
+
+    <script src="libs/queryParamLib.js"></script>
 
   </body>
 </html>
