--- a/dokuwiki/ui/public/index.html
+++ b/dokuwiki/ui/public/index.html
@@ -19,6 +19,7 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
 
-    <script src="../../libs/nethserver.js"></script>
+    <!--  //// remove import libs/ns8lib.js -->
+    <!-- <script src="../../libs/ns8lib.js"></script> -->
   </body>
 </html>
